# ergo-proxy

./: CLAUDE.md  Cargo.toml  README.md  build-deb  ergo-proxy.toml
.github/workflows/: release.yml
contracts/: protocol.md  routing.md  transport.md
debian/: conffiles  control  postinst  postrm  preinst  prerm  triggers
deploy/: ergo-proxy-node.service
deploy/dashboard/: ergo-web-scanners.conf  generate-graphs.sh  index.html  setup.sh
deploy/fail2ban/: ergo-proxy-jail.conf  ergo-proxy.conf
docs/: roadmap-to-full-node.md
docs/protocol/: ergo-p2p-spec.yaml  ergo-p2p-wire-format.md
docs/superpowers/plans/: 2026-03-31-ergo-proxy-node.md
docs/superpowers/specs/: 2026-03-31-ergo-proxy-node-design.md
src/: config.rs  lib.rs  main.rs  types.rs
src/protocol/: messages.rs  peer.rs
src/routing/: inv_table.rs  latency.rs  mod.rs  router.rs  tracker.rs
src/transport/: connection.rs  frame.rs  handshake.rs  mod.rs  vlq.rs
tests/: integration_test.rs  pcap_verify_test.rs  protocol_test.rs  routing_test.rs  transport_test.rs
tests/common/: mod.rs
